tests/error/func_arg_defined.gw
#! [contains] already declared
fun void test(int i, int i){}
